--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
 @font-face  {
-    font-family: "Geometria"; 
-   src: url("/fonts/Geometria.ttf");
-   font-family: "Source Serif Roman - Semibold";
+   src: url("/fonts/SourceSerifPro-Bold.ttf");
+   font-family: "Source Serif Roman - Bold";
    font-weight: 400;
 }
 @font-face  {
@@ -16,9 +15,10 @@
 }
 @font-face  {
     font-family: "Geometria"; 
-   src: url("/fonts/Geometria.ttf");
-   font-family: "Source Serif Roman - Semibold";
+   src: url("/fonts/Source\ Serif\ Pro\ ExtraLight.otf");
+   font-family: "Source Serif Roman - Light";
    font-weight: 400;
 }
+
 @import "norm.css";
 @import "main-page.scss";
