add 320px portfolio styles

--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -1,6 +1,7 @@
 .main-page {
     min-width: 320px;
     min-height: 480px;
+    box-sizing: border-box;
     background: rgba(#000000, 0.4)  url("/img/320_main_bg.jpg") bottom no-repeat;
 
 }
