add 320px prices page styles

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -21,6 +21,7 @@ font-weight: 400;
     display: flex;
     flex-direction: row;
     height: 342px;
+    overflow: hidden;
 }
 .gallery__photo--left {
     margin-right: 10px;
