--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,8 +22,10 @@
 .container {
    margin: 0 auto;
 }
+
 @import "norm.css";
 @import "main-page.scss";
 @import "portfolio.scss";
 @import "download-page.scss";
 @import "about.scss";
+@import "prices.scss";
