--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -2,8 +2,7 @@
     min-width: 320px;
     min-height: 480px;
     box-sizing: border-box;
-    background: rgba(#000000, 0.4)  url("/img/320_main_bg.jpg") bottom no-repeat;
-
+    background: rgba(#000000, 0.4)  url("/img/320_main_bg.jpg") left 0 top 0 no-repeat;
 }
 .main-nav {
     display: flex;
@@ -12,6 +11,9 @@
     height: 33px;
     box-sizing: border-box;
     align-items: center;
+}
+.pic__main {
+    display: none;
 }
 .main-nav__items {
     list-style: none;
@@ -103,4 +105,71 @@ margin-left: 15px;
 
 .socials {
     display: none;
+}
+
+
+@media screen and (min-width: 764px) {
+    .main-page {
+        height: 823px;
+        background: #f8f8f8 url(/img/764_main_bg.jpg) no-repeat left 456px top 0;
+        position: relative;
+    }
+   .main-nav {
+       height: 60px;
+   }
+
+   .nav__phone {
+       display: flex;
+       align-self: center;
+       margin-right: 125px;
+       width: 300px;
+    text-decoration: none;
+
+color: #3b3b3b;
+font-family: "Source Serif Roman - Semibold";
+font-size: 18px;
+font-weight: 400;
+   }
+   .hamburger {
+       margin-right: 165px;
+       &__line {
+           background-color: #000;
+           left: 0;
+       }
+   }
+.hero {
+    padding-left: 62px;
+
+    &__name {
+        color: #212021;
+        font-size: 36px;
+        margin-top: 180px;
+        margin-bottom: 35px;
+    }
+    &__desc {
+
+color: #212021;
+font-size: 16px;
+font-weight: 300;
+    }
+}
+.btn {
+    color: #212021;
+    border-bottom: 1px solid #212021;
+}
+.hero {
+    padding-top: 100px;
+    padding-left: 0;
+    width: 644px;
+    margin: 0 auto;
+}
+.hero__wrapper {
+    width: 270px;
+    margin-right: 30px;
+    float: left;
+}
+.pic__main {
+    display: block;
+    float: right;
+}
 }
