--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -162,6 +162,11 @@ font-weight: 300;
     padding-left: 0;
     width: 644px;
     margin: 0 auto;
+    &:after {
+        content: "";
+        clear: both;
+        display: table;
+    }
 }
 .hero__wrapper {
     width: 270px;
@@ -171,5 +176,28 @@ font-weight: 300;
 .pic__main {
     display: block;
     float: right;
+}
+.socials {
+    padding: 0;
+    margin: 0;
+    margin-top: 73px;
+    margin-left: 61px;
+    display: flex;
+    list-style: none;
+    flex-direction: row;
+    .social {
+        margin-right: 15px;
+        &__link {
+            text-decoration: none;
+
+opacity: 0.4;
+color: #212021;
+font-family: "Source Serif Roman";
+font-size: 12px;
+font-weight: 300;
+text-transform: uppercase;
+letter-spacing: 1.2px;
+        }
+    }
 }
 }
