--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -56,10 +56,10 @@ margin: 0;
     }
     .portfolio__photos {
         display: grid;
-        height: 700px;
         grid-template-columns:  240px 184px 184px;
         grid-auto-flow: column dense;
         grid-gap: 16px;
+        justify-content: center;
         margin-bottom: 165px;
     }
     .portfolio__photo{
