--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -205,7 +205,7 @@
         float: right;
     }
 
-    .socials {
+    .socials--tablet {
         padding: 0;
         margin: 0;
         margin-top: 73px;
