fix prices layout

--- a/src/styles/prices.scss
+++ b/src/styles/prices.scss
@@ -75,6 +75,7 @@ font-weight: 400;
         grid-template-columns: 239px 186px 180px;
         grid-gap: 17px;
         align-items: flex-start;
+        justify-content: center;
         grid-row: dense;
         margin-bottom: 300px;
     }
