--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -231,3 +231,117 @@
         }
     }
 }
+
+@media screen and (min-width: 1440px) {
+    .main-page {
+        height: 782px;
+        box-sizing: border-box;
+        background-image:
+        url(/img/1440_main_bg-2.png),
+        url(/img/1440_main_bg-1.jpg);
+        background-repeat: no-repeat, no-repeat;
+        background-position: top 100px right 60px, top right;
+        background-color: #f8f8f8;
+        position: relative;
+    }
+    .logo-link {
+        width: 254px;
+        height: 76px;
+        box-sizing: border-box;
+    }
+    .nav__phone{
+margin-right: auto;
+margin-left: 74px;
+    }
+    .main-header {
+        height: 76px;
+        box-sizing: border-box;
+    }
+    .main-nav {
+        height: 76px;
+        width: auto;
+        box-sizing: border-box;
+        &__items {
+            display: flex;
+            flex-direction: row;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+        &__item {
+            padding: 28px 60px;
+            text-decoration: none;
+            opacity: 0.6;
+            color: #212021;
+            font-family: "Source Serif Roman";
+            font-size: 18px;
+            font-weight: 400;
+                }
+    }
+    .hamburger {
+        display: none;
+    }
+    .hero {
+        height: 533px;
+        box-sizing: border-box;
+        margin-left: 154px;
+        width: 850px;
+        &__name {
+            font-size: 48px;
+            margin-top: 156px;
+        }
+        &__desc {
+            font-size: 18px;
+            width: 285px;
+        }
+        &__wrapper {
+            width: 380px;
+        }
+
+    }
+    .paginations {
+        display: flex;
+        width: 37px;
+        flex-direction: column;
+        list-style: none;
+        padding: 0;
+        position: absolute;
+        left: 20px;
+        top: 35%;
+        .pagination {
+            display: inline-block;
+            width: 15px;
+            border-bottom: 1px solid #171a1f;
+            margin-bottom: 20px;
+            padding-bottom: 5px;
+            
+            &--active {
+             width: 40px;
+             text-align: center;
+              border-bottom: 2px solid #000000;
+            }
+
+            &__link {
+                display: none;
+                text-decoration: none;
+                color: #212021;
+                font-family: "Lato";
+                font-size: 14px;
+                font-weight: 300;
+                font-style: italic;
+                &--active {
+                    display: unset;
+                }
+            }
+        }
+
+    }
+    .socials {
+        margin-left: 154px;
+        .social {
+            &__link {
+                font-size: 14px;
+            }
+        }
+    }
+}
