--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -205,7 +205,7 @@
         float: right;
     }
 
-    .socials--tablet {
+    .socials {
         padding: 0;
         margin: 0;
         margin-top: 73px;
@@ -215,8 +215,15 @@
         flex-direction: row;
 
         .social {
-            margin-right: 15px;
-
+            margin-right: 20px;
+            position: relative;
+            &:not(:last-child):after {
+                position: absolute;
+                opacity: 0.4;
+                content: "—";
+                top: 0;
+                right: -16px;
+            }
             &__link {
                 text-decoration: none;
 
@@ -336,7 +343,7 @@ margin-left: 74px;
         }
 
     }
-    .socials {
+    .socials--desktop {
         margin-left: 154px;
         .social {
             &__link {
