add 1440px contacs page styles

--- a/src/styles/contacts.css
+++ b/src/styles/contacts.css
@@ -69,7 +69,8 @@
     height: 34px; }
     .contacts__footer .socials .social__link {
       width: 34px;
-      height: 34px; }
+      height: 34px;
+      opacity: 1; }
       .contacts__footer .socials .social__link--fb {
         background: url("/img/764_icon_facebook.png") no-repeat; }
       .contacts__footer .socials .social__link--vk {
@@ -78,3 +79,18 @@
         background: url("/img/764_icon_instagram.png") no-repeat; }
       .contacts__footer .socials .social__link--pin {
         background: url("/img/764_icon_pinterest.png") no-repeat; } }
+
+@media screen and (min-width: 1440px) {
+  .section__title {
+    margin-top: 0; }
+  .contacts__footer .contacts {
+    padding: 0 166px;
+    position: relative; }
+    .contacts__footer .contacts .contacts__link {
+      font-size: 18px; }
+      .contacts__footer .contacts .contacts__link .link {
+        margin: 0 9px; }
+    .contacts__footer .contacts .contacts__links {
+      display: flex;
+      flex-direction: row;
+      margin-bottom: 72px; } }
