--- a/src/styles/main-page.css
+++ b/src/styles/main-page.css
@@ -163,7 +163,7 @@
     .socials .social {
       margin-right: 20px;
       position: relative; }
-      .socials .social:not(:last-child):after {
+      .socials .social--side:not(:last-child):after {
         position: absolute;
         opacity: 0.4;
         content: "—";
