--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -2,7 +2,12 @@
     min-width: 320px;
     min-height: 480px;
     box-sizing: border-box;
-    background: rgba(#000000, 0.4) url("/img/320_main_bg.jpg") left 0 top 0 no-repeat;
+    background: url("/img/320_main_bg.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color: rgba(#000000, 0.4);
 }
 
 .main-nav {
@@ -102,6 +107,7 @@
         font-size: 14px;
         font-weight: 300;
         margin: 0;
+        width: 260px;
         margin-left: 15px;
         margin-bottom: 40px;
     }
