--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,7 +29,12 @@
   min-width: 320px;
   min-height: 480px;
   box-sizing: border-box;
-  background: rgba(0, 0, 0, 0.4) url("/img/320_main_bg.jpg") left 0 top 0 no-repeat; }
+  background: url("/img/320_main_bg.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.4); }
 
 .main-nav {
   display: flex;
@@ -108,6 +113,7 @@
     font-size: 14px;
     font-weight: 300;
     margin: 0;
+    width: 260px;
     margin-left: 15px;
     margin-bottom: 40px; }
 
@@ -307,7 +313,8 @@
 
 .portfolio__photos {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  align-items: center; }
 
 .portfolio__photo {
   width: 290px;
@@ -411,14 +418,18 @@
     flex-direction: column;
     width: 180px;
     height: 298px;
-    margin-right: 75px;
     box-sizing: border-box;
-    margin-left: auto;
     padding-top: 77px;
+    justify-content: center;
     z-index: 2;
     color: #fff;
     position: relative;
     text-align: left; }
+  .download-page .section__wr {
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    padding-left: 45px; }
   .download-page .section__title {
     margin-top: 0;
     margin-bottom: 20px;
@@ -532,11 +543,11 @@
   display: flex;
   flex-direction: row;
   height: 342px;
-  overflow: hidden; }
+  overflow: hidden;
+  justify-content: center; }
 
 .gallery__photo--left {
   margin-right: 10px;
-  margin-left: -60px;
   margin-bottom: 35px; }
 
 .gallery__photo--right {
