--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -17,6 +17,7 @@ margin-bottom: 50px;
 .portfolio__photos {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .portfolio__photo {
     width: 290px;
@@ -113,12 +114,12 @@ margin: 0;
         top: 50%;
         right: 0;
         transform: rotate(90deg);
-opacity: 0.4;
-color: #cb98a8;
-font-family: "Source Serif Roman";
-font-size: 14px;
-font-weight: 400;
-text-transform: uppercase;
-letter-spacing: 1.4px;
+        opacity: 0.4;
+        color: #cb98a8;
+        font-family: "Source Serif Roman";
+        font-size: 14px;
+        font-weight: 400;
+        text-transform: uppercase;
+        letter-spacing: 1.4px;
     }
 }
