--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -97,6 +97,7 @@ font-weight: 400;
         background-image: url(/img/1440_about_bg-1.jpg);
         background-repeat: no-repeat;
         background-position: left 102px;
+        margin-bottom: 240px;
     }
     .about__wrapper {
         margin-top: 102px;
@@ -116,7 +117,8 @@ font-weight: 400;
         justify-content: space-between;
         height: 350px;
         margin-top: auto;
-        margin-left: 51px;
+        margin-left: auto;
+        margin-right: 75px;
     }
     .gallery__desc {
 color: #1d1c1c;
