--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -134,7 +134,7 @@
 @media screen and (min-width: 764px) {
     .main-page {
         height: 823px;
-        background: #f8f8f8 url(/img/764_main_bg.jpg) no-repeat left 456px top 0;
+        background: #f8f8f8 url(/img/764_main_bg.jpg) no-repeat right 0 top 0;
         position: relative;
     }
 
@@ -255,6 +255,7 @@
         background-position: top 100px right 60px, top right;
         background-color: #f8f8f8;
         position: relative;
+        margin-bottom: 280px;
     }
     .logo-link {
         width: 254px;
