--- a/src/styles/prices.scss
+++ b/src/styles/prices.scss
@@ -118,12 +118,16 @@ font-weight: 400;
     .photo__price {
         width: 270px;
         text-align: center;
+        line-height: 25px;
     }
     .price__time {
         font-size: 24px;
     }
     .price__value {
         font-size: 18px;
+        &::before {
+            top: 11px;
+        }
     }
     .photo__feature {
         font-size: 18px;
