--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -2,6 +2,7 @@
     min-width: 320px;
     box-sizing: border-box;
     padding: 0 15px;
+    padding-top: 138px;
 }
 
 .section__title {
@@ -9,10 +10,10 @@ color: #212021;
 font-family: "Source Serif Roman - Semibold";
 font-size: 18px;
 font-weight: 400;
-letter-spacing: 2.75px;
+letter-spacing: 2px;
 text-align: center;
 margin-bottom: 46px;
-margin-top: 58px;
+margin-top: 0px;
 position: relative;
 &:before {
     position: absolute;
@@ -33,9 +34,9 @@ position: relative;
 }
 .portfolio__photo {
     width: 290px;
-    margin-bottom: 69px;
+    margin-bottom: 70px;
     &:last-child {
-        margin-bottom: 0;
+        margin-bottom: 52px;
     }
 }
 .photo__tags {
