--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -52,6 +52,8 @@ font-weight: 400;
 }
 .gallery__info {
 text-align: center;
+width: 280px;
+margin: 0 auto;
 padding: 0 25px;
 color: #1d1c1c;
 font-family: "Source Serif Roman";
