--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -136,7 +136,7 @@
 @media screen and (min-width: 764px) {
     .main-page {
         height: 823px;
-        background: #f8f8f8 url(/img/764_main_bg.jpg) no-repeat right 0 top 0;
+        background: #f8f8f8 url(/img/764_main_bg.jpg) no-repeat right -152px top 0;
         position: relative;
     }
 
@@ -147,7 +147,7 @@
     .nav__phone {
         display: flex;
         align-self: center;
-        margin-right: 125px;
+        margin-right: 102px;
         width: 300px;
         text-decoration: none;
 
@@ -158,7 +158,7 @@
     }
 
     .hamburger {
-        margin-right: 165px;
+        margin-right: 166px;
 
         &__line {
             background-color: #000;
@@ -167,32 +167,63 @@
     }
 
     .hero {
+        width: 661px;
         padding-left: 62px;
 
         &__name {
             color: #212021;
             font-size: 36px;
+            margin: 0;
+            margin-left: 10px;
+            letter-spacing: 2.3px;
             margin-top: 180px;
-            margin-bottom: 35px;
+            margin-bottom: 33px;
+            z-index: 1;
+            position: relative;
+            &:before {
+                z-index: -1;
+                position: absolute;
+                content: "";
+                display: inline-block;
+                height: 37px;
+                width: 105px;
+                background: url(/img/764_icon_main-1.png) no-repeat;
+                top: -12px;
+                left: -40px;
+            }
+            &:after {
+                z-index: -1;
+                position: absolute;
+                content: "";
+                display: inline-block;
+                height: 48px;
+                width: 254px;
+                background: url(/img/764_icon_main-2.png) no-repeat;
+                top: 20px;
+                left: 65px;
+            }
         }
 
         &__desc {
-
+            margin-left: 11px;
+            line-height: 19px;
+            width: 250px;
             color: #212021;
             font-size: 16px;
             font-weight: 300;
+            margin-bottom: 38px;
         }
     }
 
     .btn {
         color: #212021;
+        margin-left: 9px;
         border-bottom: 1px solid #212021;
     }
 
     .hero {
-        padding-top: 100px;
+        padding-top: 102px;
         padding-left: 0;
-        width: 644px;
         margin: 0 auto;
 
         &:after {
@@ -203,7 +234,7 @@
     }
 
     .hero__wrapper {
-        width: 270px;
+        width: 300px;
         margin-right: 30px;
         float: left;
     }
@@ -216,12 +247,24 @@
     .socials {
         padding: 0;
         margin: 0;
-        margin-top: 73px;
+        margin-top: 68px;
         margin-left: 61px;
         display: flex;
         list-style: none;
         flex-direction: row;
-
+        &--tablet {
+            .social:not(:last-child):after {
+            position: absolute;
+            opacity: 0.4;
+            content: "";
+            display: inline-block;
+            width: 10px;
+            height: 2px;
+            background-color: #212021;
+            top: 10px;
+            right: -15px;
+        }
+    }
         .social {
             margin-right: 20px;
             position: relative;
@@ -232,6 +275,7 @@
                 top: 0;
                 right: -16px;
             }
+           
             &__link {
                 text-decoration: none;
                 opacity: 0.4;
@@ -240,7 +284,7 @@
                 font-size: 12px;
                 font-weight: 300;
                 text-transform: uppercase;
-                letter-spacing: 1.2px;
+                letter-spacing: 0.8px;
             }
         }
     }
