--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -63,9 +63,21 @@ font-weight: 400;
 
 @media screen and (min-width: 764px) {
     .about {
-        margin-top: 300px;
         padding: 0 61px;
+        padding-top: 272px;
+        padding-bottom: 100px;
+        background-image: url(/img/764_about_leaf-l.png) ,
+        url(/img/764_about_leaf-r.png), 
+        url(/img/764_about_leaf-b.png);
+        background-repeat: no-repeat, no-repeat, no-repeat;
+        background-position: 16px 185px, 672px 30px, 438px 1018px;
+        .section__title{
+            margin-bottom: 54px;
+            &:after{
+            content: "ABOUT";
+        }
     }
+}
     .gallery__photos {
         height: 600px;
         justify-content: center;
@@ -73,11 +85,10 @@ font-weight: 400;
     .gallery__photo--left {
         margin: 0;
         margin-right: 28px;
-        margin-bottom: 28px;
+        margin-bottom: 24px;
     }
     .gallery__photo--right {
         margin-top: 48px;
-        margin-bottom: 28px;
     }
     .gallery__info {
         display: none;
@@ -94,19 +105,23 @@ font-weight: 400;
         font-family: "Source Serif Roman";
         font-size: 16px;
         font-weight: 400;
+        &:first-child {
+            margin-bottom: 2px;
+        }
         &--tablet {
         display: block;
+        margin-top: 25px;
+
         .btn {
-            margin: 0;
-            margin-top: 29px;
+            margin-left: 0;
         }
         }
         &--left {
             margin: 0;
-            width: 306px;
+            padding-left: 13px;
+            width: 300px;
         }
         &--right {
-
         }
     }
 }
