--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -183,24 +183,29 @@
             &:before {
                 z-index: -1;
                 position: absolute;
-                content: "";
                 display: inline-block;
-                height: 37px;
-                width: 105px;
-                background: url(/img/764_icon_main-1.png) no-repeat;
-                top: -12px;
-                left: -40px;
+                content: "Food";
+                color: #fffeff;
+                font-family: "Source Serif Roman - Semibold";
+                font-size: 48px;
+                font-weight: 400;
+                top: -17px;
+                left: -42px;
+                letter-spacing: 0.5px;
             }
             &:after {
                 z-index: -1;
                 position: absolute;
-                content: "";
                 display: inline-block;
-                height: 48px;
-                width: 254px;
-                background: url(/img/764_icon_main-2.png) no-repeat;
-                top: 20px;
-                left: 65px;
+                content: "Photogrphy";
+                color: #fffeff;
+                font-family: "Source Serif Roman - Semibold";
+                font-size: 48px;
+                font-weight: 400;
+                top: 12px;
+                left: 62px;
+                letter-spacing: 0.1px;
+
             }
         }
 
@@ -310,7 +315,8 @@
     }
     .nav__phone{
 margin-right: auto;
-margin-left: 74px;
+margin-top: 14px;
+margin-left: 110px;
     }
     .main-header {
         height: 76px;
@@ -326,10 +332,12 @@ margin-left: 74px;
             list-style: none;
             margin: 0;
             padding: 0;
+            padding-left: 35px;
         }
         &__item {
-            padding: 28px 60px;
+            margin: 36px 46px 20px;
             text-decoration: none;
+            letter-spacing: 0.6px;
             opacity: 0.6;
             color: #212021;
             font-family: "Source Serif Roman";
@@ -341,15 +349,30 @@ margin-left: 74px;
         display: none;
     }
     .hero {
+        padding-top: 83px;
         height: 533px;
         box-sizing: border-box;
-        margin-left: 154px;
-        width: 850px;
+        margin-left: 156px;
+        width: 853px;
         &__name {
             font-size: 48px;
-            margin-top: 156px;
+            margin-top: 147px;
+            margin-left: 0px;
+            margin-bottom: 27px;
+            &:before{
+font-size: 83px;
+top:-36px;
+left:-34px;
+            }
+            &:after {
+                font-size: 52px;
+                top:20px;
+                left:189px;
+                letter-spacing: -0.2px;
+                        }
         }
         &__desc {
+            margin-left: 0px;
             font-size: 18px;
             width: 285px;
         }
@@ -366,16 +389,16 @@ margin-left: 74px;
         padding: 0;
         position: absolute;
         left: 20px;
-        top: 35%;
+        top: calc(50% - 128px);
         .pagination {
             display: inline-block;
-            width: 15px;
+            width: 11px;
             border-bottom: 1px solid #171a1f;
-            margin-bottom: 20px;
+            margin-bottom: 33px;
             padding-bottom: 5px;
             
             &--active {
-             width: 40px;
+             width: 37px;
              text-align: center;
               border-bottom: 2px solid #000000;
             }
@@ -395,11 +418,13 @@ margin-left: 74px;
         }
 
     }
-    .socials--desktop {
+    .socials--tablet {
+        margin-top: 118px;
         margin-left: 154px;
         .social {
             &__link {
                 font-size: 14px;
+                letter-spacing: 1px;
             }
         }
     }
