add 1440px portfolio pixel perfect styles

--- a/src/styles/main-page.css
+++ b/src/styles/main-page.css
@@ -239,8 +239,7 @@
     background-repeat: no-repeat, no-repeat;
     background-position: top 100px right 60px, top right;
     background-color: #f8f8f8;
-    position: relative;
-    margin-bottom: 280px; }
+    position: relative; }
   .logo-link {
     width: 254px;
     height: 76px;
